fix: Clean up code formatting and improve readability in various components

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wdth,wght@0,62..125,100..900;1,62..125,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap");
 @import "./variables.css";
 
 *,
@@ -213,12 +213,12 @@ dl {
 
 .layout {
 	margin: var(--space-md) auto;
-    margin-inline: max(var(--space-sm), 50% - calc(var(--paragraph-width) / 2));
+	margin-inline: max(var(--space-sm), 50% - calc(var(--paragraph-width) / 2));
 }
 
 .layout--wide {
 	margin: var(--space-md) auto;
-    margin-inline: var(--space-sm);
+	margin-inline: var(--space-sm);
 }
 
 /* === BLOCKS/COMPONENTS === */
